Fix z-index bug related to preferences menu

--- a/webapp/static/css/styles.scss
+++ b/webapp/static/css/styles.scss
@@ -84,6 +84,7 @@ body {
   border-radius: 0.7rem;
   box-shadow: 0.06rem 0.06rem 0.31rem #00f, -0.06rem -0.06rem 0.31rem #00f;
   background-color: #0d0926;
+  z-index: 20;
 }
 
 .button-small {
